Use CMAKE_MODULE_PATH for override Find-Modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,3 +232,7 @@ file (GLOB includes
 foreach (pkg IN LISTS includes)
 	include (${pkg})
 endforeach()
+
+list (PREPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/modules)
+set (CmDaB_modules_path ${CMAKE_CURRENT_SOURCE_DIR}/modules PARENT_SCOPE)
+set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} PARENT_SCOPE)
