Set reasonable default for CmDaB_${package}_BUILD_TESTING

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,13 +227,17 @@ macro (CmDaB_install package)
 	if (NOT CmDaB_${package}_TESTS_ENABLE AND NOT CmDaB_${package}_TESTS_DISABLE)
 		set (CmDaB_${package}_TESTS_ENABLE "BUILD_TESTING")
 		set (CmDaB_${package}_TESTING_DEFAULT_OPTION TRUE)
+
+		if (NOT DEFINED CmDaB_${package}_BUILD_TESTING_Old_State)
+			set (CmDaB_${package}_BUILD_TESTING ${CmDaB_Build_Tests})
+		endif()
 	endif()
 
 	CmDaB_Handle_Options (${package})
 
 	if (CmDaB_${package}_TESTING_DEFAULT_OPTION AND CmDaB_${package}_BUILD_TESTING)
 		set (BUILD_TESTING ON)
-	elseif (NOT CmDaB_${package}_TESTING_DEFAULT_OPTION AND NOT CmDaB_${package}_BUILD_TESTING)
+	else()
 		set (BUILD_TESTING OFF)
 	endif()
 
