--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,7 +226,7 @@ endfunction()
 macro (CmDaB_include_orig module)
 	list (REMOVE_ITEM CMAKE_MODULE_PATH "${CmDaB_modules_path}")
 	include (${module})
-	set_module_path()
+	CmDaB_set_module_path()
 endmacro()
 
 macro (CmDaB_install package)
@@ -306,7 +306,7 @@ macro (CmDaB_install package)
 	endif()
 endmacro()
 
-macro (set_module_path)
+macro (CmDaB_set_module_path)
 	if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.15)
 		list (PREPEND CMAKE_MODULE_PATH ${CmDaB_modules_path})
 	else()
@@ -356,5 +356,5 @@ else()
 	)
 endif()
 
-set_module_path()
+CmDaB_set_module_path()
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} PARENT_SCOPE)
